# CommitGate

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: task.md
commitgate/: __init__.py  ai_reviewer.py  cli.py  config.py  decision_engine.py  git_utils.py  gitleaks_runner.py  report_generator.py  splunk_logger.py
commitgate/ai_review/: __init__.py  findings.py  prompt.py  reviewer.py  transport.py
docs/: architecture.md
tests/: test_ai_reviewer.py  test_config.py  test_git_utils.py  test_gitleaks_runner.py  test_hook_installation.py  test_pre_push.py  test_report_generator.py
